<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<EditText
    android:id="@+id/new_entry_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:inputType="date"
    android:hint="@string/date"/>

<EditText
    android:id="@+id/new_entry_amount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:inputType="number"
    android:hint="@string/amount"/>

<EditText
    android:id="@+id/new_entry_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:hint="@string/title"/>

<Button
    android:id="@+id/create_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/create_entry"/>

</LinearLayout>